@@ -8710,8 +8710,8 @@ saveLogDir="/usr/local/dev/projects/cc/logs"</td>
             <tbody>
             <tr>
                 <td>buildresultsurl</td>
-                <td>Yes</td>
-                <td>URL to the build results JSP</td>
+                <td>No</td>
+                <td>URL to the build results JSP.  This defaults to the hostname, domain name and web port (if specified) of the server, followed by /dashboard.</td>
             </tr>
             <tr>
                 <td>defaultsuffix</td>
